New Features:
- A new button can be found on the Unraveling Sands in Remix, which will automatically fill the sands with unwanted items. The addon will not scrap items that are higher item level than what you have equipped. Additionally, it won't scrap Prismatic gems. Weapons that aren't applicable to your current specialization are automatically considered scrappable regardless of its item level.

Enhancements:
- The addon's settings menu has received a visual overhaul. In addition to the visual update, all of the addon's settings are now searchable.
- Renamed "Open Holiday Items" to "Open Containers" and added Cache of Infinite Treasure to the list of supported items.
- "Purchase Quest Items" is now usable. The addon will make an attempt to determine if a merchant has something in their wares that is necessary for an active quest.

Removals:
- The Dragonriding choice nodes are no longer configurable.

Fixes: